commit for the loginpage and delete all priority button

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
         A4M building Arellno Ext. Dipolog City Zamboanga del norte
       </p>
     </div>
-    <% if (title == "homepage" || title=="admin") { %><% }else{ %>
+    <% if (title == "psaDipolog" || title=="admin") { %><% }else{ %>
     <div class="bg-grey">
       <!-- Example single danger button -->
       <div class="btn-group">
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <% } %> <% if (title=="homepage") {%>
+      <% } %> <% if (title=="psaDipolog") {%>
       <h2>Psa-crs PACD Dipolog City</h2>
       <% } %>
     </div>
