--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -256,9 +256,10 @@
       <a href="/" class="ml-3 p-3"
         ><i class="fa fa-refresh p-1" aria-hidden="true"></i>Refresh</a
       >
-      <button onclick="deleteAllPriority()">
-        <i class="fa fa-trash-o" aria-hidden="true"></i> delete all priorities
-      </button>
+      <a href="/deleteAllPriority"
+        ><i class="fa fa-trash-o" aria-hidden="true"></i> delete all priority</a
+      >
+
       <section class="">
         <div class="bg-image" style="background-color: #f5f7fa">
           <div class="mask d-flex align-items-center h-100">
