working on responsive design

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="blur-background"></div>
+    <div class="blur-overlay"></div>
     <div class="container">
       <%- include('partials/navbar') %>
       <main class="container"><%- body %></main>
