--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,9 @@
 </div>
-<div class="fixed-bottom">&copy 2025 by archide</div>
+<div class="fixed-bottom text-muted text-center pb-2" style="z-index:-1;">
+  <small class="fs-6">
+    &copy; 2025 by nelle@PSA-CRS DIPOLOG CITY
+  </small>
+</div>
 <script
   src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
