--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -99,7 +99,10 @@
           <blockquote class="mt-3">Document type of transactions:</blockquote>
           <div class="form-row">
             <div class="form-group col-12 col-md-3">
-              <label for="selectOption">Number of birth</label>
+              <label for="selectOption"
+                ><i class="fa fa-address-book-o" aria-hidden="true"></i> Number
+                of birth</label
+              >
               <select
                 class="form-control form-control-sm bg-secondary"
                 aria-label="Default select example"
@@ -120,7 +123,10 @@
             </div>
 
             <div class="form-group col-12 col-md-3">
-              <label for="selectOption">Number of Death:</label>
+              <label for="selectOption"
+                ><i class="fa fa-address-book" aria-hidden="true"></i> Number of
+                Death:</label
+              >
               <select
                 class="form-control form-control-sm bg-warning"
                 aria-label="Default select example"
@@ -141,7 +147,10 @@
             </div>
 
             <div class="form-group col-12 col-md-3">
-              <label for="selectOption">Number og marriage:</label>
+              <label for="selectOption"
+                ><i class="fa fa-life-ring" aria-hidden="true"></i> Number of
+                marriage:</label
+              >
               <select
                 class="form-control form-control-sm bg-danger"
                 aria-label="Default select example"
@@ -162,7 +171,10 @@
             </div>
 
             <div class="form-group col-12 col-md-3">
-              <label for="selectOption">Number of cenomar:</label>
+              <label for="selectOption"
+                ><i class="fa fa-address-card" aria-hidden="true"></i> Number of
+                cenomar:</label
+              >
               <select
                 class="form-control form-control-sm bg-success"
                 aria-label="Default select example"
@@ -185,7 +197,7 @@
 
           <div class="w-100 d-flex justify-content-end align-items-end mt-3">
             <button type="submit" class="btn btn-secondary mb-3">
-              Confirm Priority
+              <i class="fa fa-hand-pointer-o" aria-hidden="true"></i> add
             </button>
           </div>
         </div>
