--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -10,7 +10,7 @@
       <div class="dot-spinner__dot"></div>
       <div class="dot-spinner__dot"></div>
     </div>
-    <button class="btn btn-primary" id="downloadId" onclick="btnDownload()">
+    <button class="btn btn-danger" id="downloadId" onclick="btnDownload()">
       <i class="fa fa-download" aria-hidden="true"></i> download appointment
       list
     </button>
@@ -18,11 +18,12 @@
   <div class="left">
     <button
       type="button"
-      class="btn btn-primary"
+      class="btn btn-warning"
       data-toggle="modal"
       data-target="#exampleModalCenter"
       data-backdrop="static"
     >
+      <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
       report counter
     </button>
     <!-- Modal -->
@@ -34,12 +35,17 @@
       aria-labelledby="exampleModalCenterTitle"
       aria-hidden="true"
     >
+      <!---->
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content" id="modalContent">
           <div id="modaltoPrint">
+            <!-- Modal Header -->
             <div class="modal-header">
-              <h5 class="modal-title text-center" id="exampleModalLongTitle">
-                Daily Statistic Rreport Of priorities
+              <h5
+                class="modal-title text-center w-100"
+                id="exampleModalLongTitle"
+              >
+                Daily Statistic Report of Priorities
               </h5>
               <button
                 type="button"
@@ -50,24 +56,21 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body d-flex justify-content-center g-3">
-              <div class="w-100">
-                <div class="client-sc">
-                  <p class="text-muted text-small"><%= dateFormat %></p>
-                  <ul class="list-inline">
-                    <li class="list-inline-item">
-                      <p>total Clients: <%= prioritySum %></p>
-                    </li>
-                  </ul>
-                </div>
 
-                <div
-                  class="w-100 d-flex flex-column justify-content-center bg-success"
-                ></div>
+            <!-- Modal Body -->
+            <div class="modal-body">
+              <div class="mb-3 text-center">
+                <p class="text-muted text-small mb-1"><%= dateFormat %></p>
+                <p class="mb-2">
+                  <strong>Total Clients:</strong> <%= prioritySum %>
+                </p>
+              </div>
 
-                <table class="table table-bordered">
-                  <thead>
-                    <tr style="color: black">
+              <!-- Table Wrapper for Horizontal Scroll on Small Screens -->
+              <div class="table-responsive">
+                <table class="table table-bordered table-sm">
+                  <thead class="thead-light">
+                    <tr>
                       <th scope="col" style="color: black">Priorities</th>
                       <th scope="col" style="color: black">Birth</th>
                       <th scope="col" style="color: green">Cenomar</th>
@@ -75,174 +78,64 @@
                       <th scope="col" style="color: gold">Death</th>
                     </tr>
                   </thead>
-
                   <tbody>
+                    <% [ {label: 'Senior', badge: senior, b: sbn, c: sc, m: sm,
+                    d: sd}, {label: 'Phil-ID', badge: philId, b: phib, c: phicn,
+                    m: phima, d: phid}, {label: 'Pregnant', badge: pregnant, b:
+                    bn, c: pc, m: pm, d: pd}, {label: 'Hospital Req.', badge:
+                    hospitalReq, b: hb, c: hc, m: hm, d: hd}, {label:
+                    'Emergency', badge: urgent, b: urb, c: urc, m: urm, d: urd},
+                    {label: 'Pwd', badge: pwd, b: pdb, c: pw, m: pwmar, d:
+                    pwdet} ].forEach(item => { %>
                     <tr>
                       <th scope="row">
-                        <div class="d-flex flex-row justify-content-between">
-                          <div class="d-flex justify-content-center">
-                            senior
-                          </div>
+                        <div
+                          class="d-flex justify-content-between align-items-center"
+                        >
+                          <div><%= item.label %></div>
                           <span class="badge badge-dark"
-                            ><%= senior %>client</span
+                            ><%= item.badge %> client<%= item.badge !== 1 ? 's'
+                            : '' %></span
                           >
                         </div>
                       </th>
-                      <td><%= sbn %></td>
-                      <td>
-                        <span class="b"> <%= sc%></span>
-                      </td>
-                      <td>
-                        <span class=""><%= sm %></span>
-                      </td>
-                      <td>
-                        <span class="b"> <%= sd %></span>
-                      </td>
+                      <td><%= item.b %></td>
+                      <td><%= item.c %></td>
+                      <td><%= item.m %></td>
+                      <td><%= item.d %></td>
                     </tr>
+                    <% }); %>
                     <tr>
                       <th scope="row">
-                        <div class="d-flex flex-row justify-content-between">
-                          <div class="d-flex justify-content-center">
-                            Phil-ID
-                          </div>
-                          <span class="badge badge-dark"
-                            ><%= philId%>client</span
-                          >
-                        </div>
+                        Total: <span><%= totalDocs %> Application Forms</span>
                       </th>
-                      <td><%= phib %></td>
-                      <td>
-                        <span class=""> <%= phicn%></span>
-                      </td>
-                      <td>
-                        <span class=""><%= phima %></span>
-                      </td>
-                      <td>
-                        <span class=""> <%= phid %></span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <th scope="row">
-                        <div class="d-flex flex-row justify-content-between">
-                          <div class="d-flex justify-content-center">
-                            pregnant
-                          </div>
-                          <span class="badge badge-dark"
-                            ><%= pregnant %>clients</span
-                          >
-                        </div>
-                      </th>
-                      <td><%= bn %></td>
-                      <td>
-                        <span class="b"> <%= pc%></span>
-                      </td>
-                      <td>
-                        <span class=""><%= pm %></span>
-                      </td>
-                      <td>
-                        <span class="b"> <%= pd %></span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <th scope="row">
-                        <div class="d-flex flex-row justify-content-between">
-                          <div class="d-flex justify-content-center">
-                            Hospital Req.
-                          </div>
-                          <span class="badge badge-dark"
-                            ><%= hospitalReq%>clients</span
-                          >
-                        </div>
-                      </th>
-                      <td><%= hb %></td>
-                      <td>
-                        <span class=""> <%= hc%></span>
-                      </td>
-                      <td>
-                        <span class=""><%= hm %></span>
-                      </td>
-                      <td>
-                        <span class=""> <%= hd %></span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <th scope="row">
-                        <div class="d-flex flex-row justify-content-between">
-                          <div class="d-flex justify-content-center">
-                            Emergency
-                          </div>
-                          <span class="badge badge-dark"
-                            ><%= urgent %>client</span
-                          >
-                        </div>
-                      </th>
-                      <td><%= urb %></td>
-                      <td>
-                        <span class="b"> <%= urc%></span>
-                      </td>
-                      <td>
-                        <span class=""><%= urm %></span>
-                      </td>
-                      <td>
-                        <span class="b"> <%= urd %></span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <th scope="row">
-                        <div class="d-flex flex-row justify-content-between">
-                          <div class="d-flex justify-content-center">Pwd</div>
-                          <span class="badge badge-dark"><%= pwd %>client</span>
-                        </div>
-                      </th>
-                      <td><%= pdb %></td>
-                      <td>
-                        <span class=""> <%= pw%></span>
-                      </td>
-                      <td>
-                        <span class=""><%= pwmar %></span>
-                      </td>
-                      <td>
-                        <span class=""> <%= pwdet %></span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <th scope="row">
-                        Total:: <span> <%= totalDocs %> Application Forms</span>
-                      </th>
-                      <td>
-                        <span class=""><%= totalBirth %></span>
-                      </td>
-                      <td>
-                        <span class=""><%= totalCenomar %></span>
-                      </td>
-                      <td>
-                        <span class=""><%= totalMarriage %></span>
-                      </td>
-                      <td>
-                        <span class=""><%= totalDeath %></span>
-                      </td>
+                      <td><%= totalBirth %></td>
+                      <td><%= totalCenomar %></td>
+                      <td><%= totalMarriage %></td>
+                      <td><%= totalDeath %></td>
                     </tr>
                   </tbody>
                 </table>
               </div>
             </div>
-          </div>
 
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="modalReport('modaltoPrint')"
-            >
-              Print
-            </button>
+            <!-- Modal Footer -->
+            <div class="modal-footer d-flex flex-wrap justify-content-center">
+              <button
+                type="button"
+                class="btn btn-secondary m-1"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button
+                type="button"
+                class="btn btn-primary m-1"
+                onclick="modalReport('modaltoPrint')"
+              >
+                Print
+              </button>
+            </div>
           </div>
         </div>
       </div>
